BusOne/src/objects/EM_Venue_vod__c.object
<CustomObject>
    <description>List of venues that can be used for events in Veeva Event Management.</description>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Address line 2 of an event. If using a venue list, this is filled in automatically.</description>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_vod__c</fullName>
        <description>Address of an event. If using a venue list, this is filled in automatically.</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City of an event. If using a venue list, this is filled in automatically.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Formatted_Address_vod__c</fullName>
        <description>Concatenation of address fields. This formula can be modified to display a venue address in a different format.</description>
        <formula>Address_vod__c +
IF(ISBLANK( Address_Line_2_vod__c ), &quot;&quot;, &quot;, &quot; + Address_Line_2_vod__c) +
IF(ISBLANK( City_vod__c ), &quot;&quot;, &quot;, &quot; + City_vod__c) +
IF(ISBLANK( State_Province_vod__c ), &quot;&quot;, &quot;, &quot; + State_Province_vod__c) +
IF(ISBLANK( Postal_Code_vod__c ), &quot;&quot;, &quot;, &quot; + Postal_Code_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_vod__c</fullName>
        <description>Postal code of an event. If using a venue list, this is filled in automatically.</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province_vod__c</fullName>
        <description>State or province of an event. If using a venue list, this is filled in automatically.</description>
        <label>State / Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Used to determine if a venue is eligible for use</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible_vod</fullName>
                </value>
                <value>
                    <fullName>Inactive_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Venue</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <recordTypes>
        <fullName>Venue_vod</fullName>
        <active>true</active>
        <description>Venue</description>
        <label>Venue_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>